--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next-auth/mongodb-adapter": "^1.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.10.1",
+    "@radix-ui/react-slot": "^1.2.3",
     "@react-pdf/renderer": "^3.1.9",
     "@tailwindcss/forms": "^0.5.3",
     "@types/leaflet": "^1.9.3",
@@ -25,6 +26,8 @@
     "@vechaiui/react": "^0.2.2",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "eslint-config-next": "13.0.5",
@@ -34,6 +37,7 @@
     "leaflet": "^1.9.3",
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "leaflet-geosearch": "^3.7.0",
+    "lucide-react": "^0.552.0",
     "mongodb": "^5.1.0",
     "mongoose": "^6.10.0",
     "next": "13.0.5",
@@ -44,10 +48,13 @@
     "prisma": "^4.10.1",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.0",
     "react-responsive-carousel": "^3.2.23",
     "sass": "^1.62.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "tw-elements": "^1.0.0-beta2"
   },
   "devDependencies": {
